Bump up Java version to 21