@@ -19,6 +19,7 @@ package org.apache.solr.handler.admin;
 
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
+import java.net.URI;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -133,7 +134,7 @@ public class AdminHandlersProxy {
       String nodeName, String endpoint, SolrParams params, ZkController zkController)
       throws IOException, SolrServerException {
     log.debug("Proxying {} request to node {}", endpoint, nodeName);
-    URL baseUrl = new URL(zkController.zkStateReader.getBaseUrlForNodeName(nodeName));
+    URL baseUrl = URI.create(zkController.zkStateReader.getBaseUrlForNodeName(nodeName)).toURL();
     HttpSolrClient solr = new HttpSolrClient.Builder(baseUrl.toString()).build();
     SolrRequest<?> proxyReq = new GenericSolrRequest(SolrRequest.METHOD.GET, endpoint, params);
     HttpSolrClient.HttpUriRequestResponse proxyResp = solr.httpUriRequest(proxyReq);
